--- a/src/app/hub/content-workspace/content-workspace.component.html
+++ b/src/app/hub/content-workspace/content-workspace.component.html
@@ -776,16 +776,16 @@
           <div class="dropdown-menu" #tagsDropDown style="width:18rem;" aria-labelledby="tagsDD"
             (click)="$event.stopPropagation();">
             <mat-form-field appearance="outline" class="dropdown-item" class="bg-white w-100 px-3">
-              <mat-label>Match ALL of theese tags</mat-label>
-              <input matInput placeholder="Match ALL of theese tags">
+              <mat-label>Match ALL of these tags</mat-label>
+              <input matInput placeholder="Match ALL of these tags">
             </mat-form-field>
             <mat-form-field appearance="outline" class="dropdown-item" class="bg-white w-100 px-3">
-              <mat-label>Match ANY of theese tags</mat-label>
-              <input matInput placeholder="Match ANY of theese tags">
+              <mat-label>Match ANY of these tags</mat-label>
+              <input matInput placeholder="Match ANY of these tags">
             </mat-form-field>
             <mat-form-field appearance="outline" class="dropdown-item" class="bg-white w-100 px-3">
-              <mat-label>Match NONE of theese tags</mat-label>
-              <input matInput placeholder="Match NONE of theese tags">
+              <mat-label>Match NONE of these tags</mat-label>
+              <input matInput placeholder="Match NONE of these tags">
             </mat-form-field>
           </div>
         </div>
@@ -1338,16 +1338,16 @@
               </button>
               <div class="dropdown-menu" aria-labelledby="tagsDD" style="width:18rem;">
                 <mat-form-field appearance="outline" class="dropdown-item" class="bg-white w-100 px-3">
-                  <mat-label>Match ALL of theese tags</mat-label>
-                  <input matInput placeholder="Match ALL of theese tags">
+                  <mat-label>Match ALL of these tags</mat-label>
+                  <input matInput placeholder="Match ALL of these tags">
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="dropdown-item" class="bg-white w-100 px-3">
-                  <mat-label>Match ANY of theese tags</mat-label>
-                  <input matInput placeholder="Match ANY of theese tags">
+                  <mat-label>Match ANY of these tags</mat-label>
+                  <input matInput placeholder="Match ANY of these tags">
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="dropdown-item" class="bg-white w-100 px-3">
-                  <mat-label>Match NONE of theese tags</mat-label>
-                  <input matInput placeholder="Match NONE of theese tags">
+                  <mat-label>Match NONE of these tags</mat-label>
+                  <input matInput placeholder="Match NONE of these tags">
                 </mat-form-field>
               </div>
             </div>
