--- a/src/app/hub/tags/tags.component.html
+++ b/src/app/hub/tags/tags.component.html
@@ -26,7 +26,7 @@
                   [floatLabel]="'never'">
                   <input matInput placeholder="Add Category" class="ml-0" formControlName="name" required>
                   <div matSuffix>
-                    <button type="submit" class="btn btn-secondary input-btn mr-1">
+                    <button class="btn btn-secondary input-btn mr-1" (click)="cancelCatg();">
                       <i class="fas fa-times"></i>
                     </button>
                     <button type="submit" class="btn btn-primary input-btn"
