--- a/src/app/web-app/view/view.component.html
+++ b/src/app/web-app/view/view.component.html
@@ -1,30 +1,32 @@
 <!-- <app-loader [type]="'page'" *ngIf="loading"></app-loader>
-<div *ngIf="!loading"> -->
-<div class="row mx-0">
-  <!-- *ngIf="cntnt else noCntnt" -->
-  <div class="heading bg-white w-100 row mx-0">
-    <div class="col-4 align-self-center">test name.pdf</div>
-    <div class="col-4 align-self-center d-flex justify-content-center">
-      <div class="btn" placement="bottom" ngbTooltip="{{leftSide ? 'Hide Pages' : 'Show Pages'}}"
-        (click)="leftSide = !leftSide"><i class="fas fa-th-large"></i></div>
-      <div class="dropdown">
-        <button class="btn" type="button" id="moreDD" data-toggle="dropdown">
-          <i class="fas fa-ellipsis-h"></i>
-        </button>
-        <div class="dropdown-menu" aria-labelledby="moreDD">
-          <button class="dropdown-item curs-ptr"><i class="fas fa-download"></i> Download</button>
-          <button class="dropdown-item curs-ptr"><i class="fas fa-thumbs-up"></i> Like</button>
-        </div>
+<div *ngIf="!loadi?ng">
+<div *ngIf="cntnt else noCntnt"> -->
+<div class="heading bg-white w-100 row mx-0">
+  <div class="col-4 align-self-center">test name.pdf</div>
+  <div class="col-4 align-self-center d-flex justify-content-center">
+    <div class="btn" placement="bottom" ngbTooltip="{{leftSide ? 'Hide Pages' : 'Show Pages'}}"
+      (click)="leftSide = !leftSide"><i class="fas fa-th-large"></i></div>
+    <div class="dropdown">
+      <button class="btn" type="button" id="moreDD" data-toggle="dropdown">
+        <i class="fas fa-ellipsis-h"></i>
+      </button>
+      <div class="dropdown-menu" aria-labelledby="moreDD">
+        <button class="dropdown-item curs-ptr"><i class="fas fa-download"></i> Download</button>
+        <button class="dropdown-item curs-ptr"><i class="fas fa-thumbs-up"></i> Like</button>
       </div>
     </div>
-    <div class="col-4 text-right align-self-center">
-      <div class="btn"><i class="fas fa-expand-alt"></i></div>
-      <div class="btn"><i class="fas fa-times"></i></div>
-    </div>
   </div>
-  <div class="side-body col-2 bg-white text-center" *ngIf="leftSide">
+  <div class="col-4 text-right align-self-center">
+    <div class="btn"><i class="fas fa-expand-alt"></i></div>
+    <div class="btn"><i class="fas fa-times"></i></div>
+  </div>
+  <div class="btn btn-light right-side-toggle" (click)="rightSide = !rightSide"><i
+      class="fas fa-angle-double-{{rightSide ? 'right' : 'left'}}"></i></div>
+</div>
+<div class="pdf-view d-flex mx-0">
+  <div class="left-body bg-white text-center" *ngIf="leftSide">
     <div class="bg-hi-grey rounded px-3 py-1 my-3 w-fit mx-auto">test name.pdf</div>
-    <div class="d-flex my-3 active">
+    <div class="d-flex my-3 pl-3 active">
       <mat-checkbox class="align-self-center mb-4"></mat-checkbox>
       <div>
         <div class="thumbnail">
@@ -33,7 +35,7 @@
         <div class="num py-1 px-2 mx-auto mt-1 rounded w-fit">1</div>
       </div>
     </div>
-    <div class="d-flex my-3" *ngFor="let t of testArr">
+    <div class="d-flex my-3 pl-3" *ngFor="let t of testArr">
       <mat-checkbox class="align-self-center mb-4"></mat-checkbox>
       <div>
         <div class="thumbnail">
@@ -43,12 +45,123 @@
       </div>
     </div>
   </div>
-  <div class="main-body border" [ngClass]="{'col-10': leftSide, 'col-12': !leftSide}">
+  <div class="main-body border w-100">
     <!-- {{cntnt.contentPath||'N/A'}} -->
     test
   </div>
+  <div class="right-body bg-white pt-1" *ngIf="rightSide">
+    <mat-tab-group>
+      <mat-tab label="Details">
+        <div class="px-3">
+          <div class="dark-bg-hover rounded px-3 py-2 mt-2" (click)="infoToggle = !infoToggle">
+            Info
+            <i class="fa fa-chevron-{{infoToggle ? 'up' : 'down'}} float-right mt-1"></i>
+          </div>
+          <div *ngIf="infoToggle" class="pl-3">
+            <div class="mt-2 work-div">
+              <div class="font-weight-bold mb-1">
+                Updated on
+              </div>
+              <div class="text-hi-dark-grey">
+                04-11-2018
+              </div>
+            </div>
+            <div class="mt-2 work-div">
+              <div class="font-weight-bold mb-1">
+                Authors
+              </div>
+              <div class="text-hi-dark-grey">
+                <div class="author bg-hi-grey px-3 py-2 rounded-pill mt-1">
+                  <span class="bg-warning rounded-circle p-1 text-white">AD</span>
+                  Andrea D'suzza
+                </div>
+              </div>
+            </div>
+          </div>
+          <hr>
+          <div class="dark-bg-hover rounded px-3 py-2" (click)="enggToggle = !enggToggle">
+            Engagement
+            <i class="fa fa-chevron-{{enggToggle ? 'up' : 'down'}} float-right mt-1"></i>
+          </div>
+          <div *ngIf="enggToggle" class="pl-3 row mx-0 mt-2">
+            <div class="col pl-0">
+              <div class="h3">17</div>
+              <span>Total in app views</span>
+            </div>
+            <div class="col pl-0">
+              <div class="h3">4</div>
+              <span>Total customer shares</span>
+            </div>
+            <div class="col pl-0">
+              <div class="h3">27s</div>
+              <span>Avg. customer view time</span>
+            </div>
+          </div>
+          <hr>
+          <div class="dark-bg-hover rounded px-3 py-2" (click)="tagsToggle = !tagsToggle">
+            Tags
+            <i class="fa fa-chevron-{{tagsToggle ? 'up' : 'down'}} float-right mt-1"></i>
+          </div>
+          <div *ngIf="tagsToggle" class="pl-3 row mx-0 mt-2">
+            <span class="rounded-pill px-3 py-1 bg-hi-grey text-primary mr-2">
+              tag1
+            </span>
+            <span class="rounded-pill px-3 py-1 bg-hi-grey text-primary mr-2">
+              tag2
+            </span>
+          </div>
+        </div>
+      </mat-tab>
+      <mat-tab label="Comments (0)">
+        <div class="px-3">
+          <div class="comment d-flex mt-2">
+            <div class="align-self-center mr-2">
+              <span class="rounded-circle p-2 bg-warning">AD</span>
+            </div>
+            <div class="border-bottom pb-2">
+              <div class="user-name">
+                Mike Tilly <span class="date ml-3 text-hi-grey">Jan 17, 2020</span>
+                <div class="btn btn-light float-right"><i class="fas fa-trash-alt"></i></div>
+              </div>
+              <div class="comment-text text-hi-dark-grey">Lorem ipsum dolor sit amet consectetur adipisicing
+                elit.
+                Reprehenderit
+                provident saepe amet ipsum</div>
+            </div>
+          </div>
+          <div class="comment d-flex mt-2">
+            <div class="align-self-center mr-2">
+              <span class="rounded-circle p-2 bg-warning">AD</span>
+            </div>
+            <div class="border-bottom pb-2">
+              <div class="user-name">
+                Mike Tilly <span class="date ml-3 text-hi-grey">Jan 17, 2020</span>
+                <div class="btn btn-light float-right"><i class="fas fa-trash-alt"></i></div>
+              </div>
+              <div class="comment-text text-hi-dark-grey">Lorem ipsum dolor sit amet consectetur adipisicing
+                elit.
+                Reprehenderit
+                provident saepe amet ipsum</div>
+            </div>
+          </div>
+
+          <!-- add comment -->
+          <div class="comment d-flex mt-2">
+            <div class="align-self-center mx-2">
+              <span class="rounded-circle p-1 bg-warning">AD</span>
+            </div>
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Leave a comment</mat-label>
+              <textarea matInput placeholder="Leave a comment"></textarea>
+            </mat-form-field>
+          </div>
+        </div>
+      </mat-tab>
+    </mat-tab-group>
+  </div>
 </div>
-<!-- <ng-template #noCntnt>
+<!-- </div>
+<ng-template #noCntnt>
     No Content found
   </ng-template>
 </div> -->
