--- a/src/app/web-app/view/view.component.scss
+++ b/src/app/web-app/view/view.component.scss
@@ -3,13 +3,64 @@
   min-height: 10vh;
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4);
   z-index: 1;
+  position: relative;
+
+  .right-side-toggle {
+    position: absolute;
+    right: 21px;
+    bottom: -47px;
+  }
 }
 
-.side-body,
-.main-body {
+.left-body,
+.main-body,
+.right-body {
   min-height: 90vh;
   max-height: 90vh;
   overflow-y: auto;
+}
+
+.left-body {
+  min-width: 250px;
+  width: 250px;
+}
+
+.right-body {
+  min-width: 500px;
+  width: 500px;
+
+  .bg-warning.text-white {
+    font-size: 0.8rem;
+    background-color: #CC4A00 !important;
+  }
+
+  .author {
+    width: fit-content;
+  }
+
+  .comment {
+    font-size: 14px;
+
+    .user-name {
+
+      .date {
+        font-size: 12px;
+      }
+
+      .float-right {
+        opacity: 0;
+        transition: opacity 0.5s linear;
+      }
+    }
+  }
+
+  .comment:hover {
+    .user-name {
+      .float-right {
+        opacity: 1;
+      }
+    }
+  }
 }
 
 .active {
