--- a/src/styles.scss
+++ b/src/styles.scss
@@ -155,6 +155,14 @@ button[aria-label="Close"]:focus {
 
 
 // material
+.pdf-view {
+  .right-body {
+    mat-tab-header {
+      z-index: 0;
+    }
+  }
+}
+
 .workspace-nav {
   .mat-tab-label {
     min-width: 90px !important;
