--- a/src/app/web-app/header/header.component.html
+++ b/src/app/web-app/header/header.component.html
@@ -5,8 +5,7 @@
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item align-self-center">
-          <a class="nav-link" [routerLinkActive]="['active']"
-            [routerLink]="'/web-app/resource/collections'">Resource</a>
+          <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="'/web-app/resource/collections'">Resource</a>
         </li>
         <li class="nav-item align-self-center">
           <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="'/web-app/share'">Shares</a>
@@ -21,8 +20,9 @@
             <i class="fas fa-bell align-bottom icon-size"></i>
           </a>
           <div class="dropdown-menu large-dropdown dropdown-menu-right" aria-labelledby="notificatioDD">
-            <h5 class="dropdown-item text-dark font-weight-bold no-bg-hover">Notifications<small
-                class="badge badge-danger float-right">8</small></h5>
+            <h5 class="dropdown-item text-dark font-weight-bold no-bg-hover">
+              Notifications<small class="badge badge-danger float-right">8</small>
+            </h5>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item row m-0 mt-2" href="javascript:void(0)">
               <div class="col-3 align-self-center"><img src="assets/images/avatar.png" class="w-100"></div>
@@ -51,8 +51,7 @@
           </div>
         </li>
         <li class="nav-item align-self-center dropdown ml-4 user">
-          <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="userDropdown" role="button"
-            data-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="userDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
             <img src="assets/images/avatar.png">
             <span class="align-middle">{{userInfo && userInfo.fN?userInfo.fN:'User'}}</span>
           </a>
@@ -70,14 +69,11 @@
               </div>
             </h6>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" [routerLink]="'/web-app/personal-settings'"><i class="fas fa-user mr-2"></i>My
-              Profile</a>
-            <a class="dropdown-item" [routerLink]="'/dashboard'"><i class="fas fa-user-shield mr-2"></i>Admin</a>
+            <a class="dropdown-item" [routerLink]="'/web-app/personal-settings'"><i class="fas fa-user mr-2"></i>My Profile</a>
+            <a class="dropdown-item" target="_blank" [routerLink]="'/dashboard'"><i class="fas fa-user-shield mr-2"></i>Admin</a>
             <a class="dropdown-item curs-ptr" (click)="openModal()"><i class="fas fa-lock mr-2"></i>Change Password</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="javascript:void(0)" (click)="logout();">
-              <i class="fas fa-sign-out-alt mr-2"></i>Logout
-            </a>
+            <a class="dropdown-item" href="javascript:void(0)" (click)="logout();"><i class="fas fa-sign-out-alt mr-2"></i>Logout</a>
           </div>
         </li>
       </ul>
