--- a/src/app/web-app/view/view.component.html
+++ b/src/app/web-app/view/view.component.html
@@ -2,52 +2,43 @@
 <div *ngIf="!loading">
   <div *ngIf="cntnt else noCntnt">
     <div class="heading bg-white w-100 row mx-0">
-      <div class="col-4 align-self-center">test name.pdf</div>
+      <div class="col-4 align-self-center">{{cntnt.name}}</div>
       <div class="col-4 align-self-center d-flex justify-content-center">
-        <div class="btn" placement="bottom" ngbTooltip="{{leftSide ? 'Hide Pages' : 'Show Pages'}}"
-          (click)="leftSide = !leftSide"><i class="fas fa-th-large"></i></div>
+        <div class="btn" placement="bottom" ngbTooltip="{{leftSide?'Hide Pages':'Show Pages'}}" (click)="leftSide = !leftSide"><i class="fas fa-th-large"></i></div>
         <div class="dropdown">
           <button class="btn" type="button" id="moreDD" data-toggle="dropdown">
             <i class="fas fa-ellipsis-h"></i>
           </button>
           <div class="dropdown-menu" aria-labelledby="moreDD">
-            <button class="dropdown-item curs-ptr"><i class="fas fa-download"></i> Download</button>
-            <button class="dropdown-item curs-ptr"><i class="fas fa-thumbs-up"></i> Like</button>
+            <button class="dropdown-item curs-ptr" (click)="downloadFile()"><i class="fas fa-download"></i>Download</button>
+            <button class="dropdown-item curs-ptr"><i class="fas fa-thumbs-up"></i>Like</button>
           </div>
         </div>
       </div>
       <div class="col-4 text-right align-self-center">
-        <div class="btn"><i class="fas fa-expand-alt"></i></div>
+        <div class="btn" *ngIf="!isFullScreen" (click)="openFullscreen()" ngbTooltip="View in Full Screen"><i class="fas fa-expand-alt"></i></div>
+        <div class="btn" *ngIf="isFullScreen" (click)="closeFullscreen()" ngbTooltip="Exit from Full Screen"><i class="fas fa-compress-arrows-alt"></i></div>
         <div class="btn"><i class="fas fa-times"></i></div>
       </div>
-      <div class="btn btn-light right-side-toggle" (click)="rightSide = !rightSide"><i
-          class="fas fa-angle-double-{{rightSide ? 'right' : 'left'}}"></i></div>
+      <div class="btn btn-light right-side-toggle" ngbTooltip="{{rightSide?'Hide Detailed Section':'Show Detailed Section'}}" (click)="rightSide = !rightSide">
+        <i class="fas fa-angle-double-{{rightSide?'right':'left'}}"></i>
+      </div>
     </div>
     <div class="pdf-view d-flex mx-0">
       <div class="left-body bg-white text-center" *ngIf="leftSide">
-        <div class="bg-hi-grey rounded px-3 py-1 my-3 w-fit mx-auto">test name.pdf</div>
-        <div class="d-flex my-3 pl-3 active">
+        <div class="bg-hi-grey rounded px-3 py-1 my-3 w-fit mx-auto">{{cntnt.name}}</div>
+        <div class="d-flex my-3 pl-3" *ngFor="let cPImg of cntnt!.pdfImages"> <!-- class active -->
           <mat-checkbox class="align-self-center mb-4"></mat-checkbox>
-          <div>
+          <div class="curs-ptr" (click)="goToPage(cPImg)">
             <div class="thumbnail">
-              <img src="assets/images/discription.png" class="w-50">
+              <img [src]="cPImg.imagePath?cPImg.imagePath:defIcon" class="w-50">
             </div>
-            <div class="num py-1 px-2 mx-auto mt-1 rounded w-fit">1</div>
-          </div>
-        </div>
-        <div class="d-flex my-3 pl-3" *ngFor="let t of testArr">
-          <mat-checkbox class="align-self-center mb-4"></mat-checkbox>
-          <div>
-            <div class="thumbnail">
-              <img src="assets/images/discription.png" class="w-50">
-            </div>
-            <div class="num py-1 px-2 mx-auto mt-1 rounded w-fit">1</div>
+            <div class="num py-1 px-2 mx-auto mt-1 rounded w-fit">{{cPImg.pageNo}}</div>
           </div>
         </div>
       </div>
       <div class="main-body overflow-auto w-100 p-2">
-        {{cntnt.contentPath||'N/A'}}
-        test
+        <div id='pdf-div' class='pdf-view'></div>
       </div>
       <div class="right-body bg-white pt-1 pb-3" *ngIf="rightSide">
         <mat-tab-group>
@@ -55,7 +46,7 @@
             <div class="px-3">
               <div class="dark-bg-hover rounded px-3 py-2 mt-2" (click)="infoToggle = !infoToggle">
                 Info
-                <i class="fa fa-chevron-{{infoToggle ? 'up' : 'down'}} float-right mt-1"></i>
+                <i class="fa fa-chevron-{{infoToggle?'up':'down'}} float-right mt-1"></i>
               </div>
               <div *ngIf="infoToggle" class="pl-3">
                 <div class="mt-2 work-div">
@@ -63,7 +54,7 @@
                     Updated on
                   </div>
                   <div class="text-hi-dark-grey">
-                    04-11-2018
+                    {{(cntnt.updatedDate|date:'dd MMM, yyyy HH:mm')||'N/A'}}
                   </div>
                 </div>
                 <div class="mt-2 work-div">
@@ -81,7 +72,7 @@
               <hr>
               <div class="dark-bg-hover rounded px-3 py-2" (click)="enggToggle = !enggToggle">
                 Engagement
-                <i class="fa fa-chevron-{{enggToggle ? 'up' : 'down'}} float-right mt-1"></i>
+                <i class="fa fa-chevron-{{enggToggle?'up':'down'}} float-right mt-1"></i>
               </div>
               <div *ngIf="enggToggle" class="pl-3 row mx-0 mt-2">
                 <div class="col pl-0">
@@ -100,60 +91,48 @@
               <hr>
               <div class="dark-bg-hover rounded px-3 py-2" (click)="tagsToggle = !tagsToggle">
                 Tags
-                <i class="fa fa-chevron-{{tagsToggle ? 'up' : 'down'}} float-right mt-1"></i>
+                <i class="fa fa-chevron-{{tagsToggle?'up':'down'}} float-right mt-1"></i>
               </div>
               <div *ngIf="tagsToggle" class="pl-3 row mx-0 mt-2">
-                <span class="rounded-pill px-3 py-1 bg-hi-grey text-primary mr-2">
-                  tag1
-                </span>
-                <span class="rounded-pill px-3 py-1 bg-hi-grey text-primary mr-2">
-                  tag2
-                </span>
+                <div *ngIf="cntnt.contentTags && cntnt.contentTags.length>0 else noCntntTg">
+                  <span class="rounded-pill px-3 py-1 bg-hi-grey text-primary mr-2" *ngFor="let cT of cntnt.contentTags">
+                    {{cT.tagName}}
+                  </span>
+                </div>
+                <ng-template #noCntntTg><div>No Tags</div></ng-template>
               </div>
             </div>
           </mat-tab>
           <mat-tab label="Comments (0)">
             <div class="px-3">
-              <div class="comment d-flex mt-2">
+              <div class="comment d-flex mt-2" *ngFor="let cmnt of cntnt.comments">
                 <div class="align-self-center mr-2">
-                  <span class="rounded-circle p-2 bg-warning">AD</span>
+                  <span class="rounded-circle p-2 bg-warning">TU</span>
                 </div>
                 <div class="border-bottom pb-2">
                   <div class="user-name">
-                    Mike Tilly <span class="date ml-3 text-hi-grey">Jan 17, 2020</span>
+                    {{cmnt.createdByFullName}}
+                    <span class="date ml-3 text-hi-grey">{{(cmnt.createdDate|date:'dd MMM, yyyy')||'N/A'}}</span>
                     <div class="btn btn-light float-right"><i class="fas fa-trash-alt"></i></div>
                   </div>
-                  <div class="comment-text text-hi-dark-grey">Lorem ipsum dolor sit amet consectetur adipisicing
-                    elit.
-                    Reprehenderit
-                    provident saepe amet ipsum</div>
+                  <div class="comment-text text-hi-dark-grey">{{cmnt.commentText||'N/A'}}m</div>
                 </div>
               </div>
-              <div class="comment d-flex mt-2">
-                <div class="align-self-center mr-2">
-                  <span class="rounded-circle p-2 bg-warning">AD</span>
-                </div>
-                <div class="border-bottom pb-2">
-                  <div class="user-name">
-                    Mike Tilly <span class="date ml-3 text-hi-grey">Jan 17, 2020</span>
-                    <div class="btn btn-light float-right"><i class="fas fa-trash-alt"></i></div>
-                  </div>
-                  <div class="comment-text text-hi-dark-grey">Lorem ipsum dolor sit amet consectetur adipisicing
-                    elit.
-                    Reprehenderit
-                    provident saepe amet ipsum</div>
-                </div>
-              </div>
-
               <!-- add comment -->
               <div class="comment d-flex mt-2">
                 <div class="align-self-center mx-2">
-                  <span class="rounded-circle p-1 bg-warning">AD</span>
+                  <span class="rounded-circle p-1 bg-warning">TU</span>
                 </div>
                 <mat-form-field appearance="outline" class="w-100">
                   <mat-label>Leave a comment</mat-label>
-                  <textarea matInput placeholder="Leave a comment"></textarea>
+                  <textarea matInput placeholder="Leave a comment" [(ngModel)]="cmnt" name="cmnt"></textarea>
                 </mat-form-field>
+              </div>
+              <div class="form-group text-right">
+                <button (click)="addCmnt('cmnt')" [disabled]="true" class="btn btn-primary text-white btn-sm">
+                  <!-- <app-loader [type]="'btn'" *ngIf="disb.cmnt"></app-loader> -->
+                  Submit
+                </button>
               </div>
             </div>
           </mat-tab>
